fix: Pooling name needs to add "2D" fix: dropItemMenu can't select because z-index feat: change dropItem opacity to 1 when right click

--- a/static/style/layer.css
+++ b/static/style/layer.css
@@ -19,9 +19,9 @@
 }
 
 .reshaping_layer {
-    background-color: #2100db;
+    background-color: #a190ff;
 }
 
 .regularization_layer {
-    background-color: #8396eb;
+    background-color: #fb86ff;
 }
