--- a/static/style/model.css
+++ b/static/style/model.css
@@ -109,10 +109,11 @@
     align-items: center;
     width: 180px;
     height: 100px;
-    color: white;
+    color: #000000;
     border: 1px solid black;
     z-index: 10;
     opacity: 0.7;
+    font-size: large;
 }
 
 .dropItemMenu {
@@ -124,6 +125,8 @@
     background-color: #2f3245;
     text-align: center;
     flex-direction: column;
+    font-size: medium;
+    color: #ffffff;
 }
 .dropItemMenuLine {
     display: flex;
@@ -148,7 +151,7 @@
 
 .dropItemPoint {
     width: 15px;
-    height: 30px;
+    height: 45px;
     cursor: pointer;
     font-size: x-large;
     border-top: 1px solid black;
@@ -240,7 +243,7 @@ canvas {
     margin-left: 10px;
     width: 180px;
     font-size: 1.3rem;
-    color: #ffffff;
+    color: #000000;
     white-space: nowrap;
     display: flex;
     align-items: center;
